cmake_minimum_required(VERSION 3.19)
project(cMake)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")

#add_executable(cMake   list.cpp singleTest.cpp)
add_executable(singleTest singleTest.cpp)
add_executable(list list.cpp)

add_executable(mergerList mergerList.cpp)
add_executable(DoubleList DoubleList.cpp)
add_executable(SeqStack_6_9 SeqStack_6_9.cpp)

add_executable(c_Stack c_Stack_6_9.cpp)
add_executable(linkStack_6_9 linkStack_6_9.cpp)
add_executable(shareStack_6_11 shareStack_6_11.cpp)
add_executable(StackUse_6_13 StackUse_6_13.cpp)
add_executable(_6_14_cutSqQueue _6_14_cutSqQueue.cpp)
add_executable(_6_14_tagSqQueue _6_14_tagSqQueue.cpp)
add_executable(_6_14_sizeSqQueue _6_14_sizeSqQueue.cpp)
add_executable(_6_17_findWiner _6_17_findWiner.cpp)
add_executable(_6_17_PopOrder _6_17_PopOrder.cpp)
add_executable(_6_18_QueueImitateStack _6_18_QueueImitateStack.cpp)
add_executable(_6_19_isValidBracekt _6_19_isValidBracekt.cpp)
add_executable(_6_27_digitConversion _6_27_digitConversion.cpp)
add_executable(_6_27_tree1 _6_27_tree1.cpp)
add_executable(_6_29_preOrderTree _6_29_preOrderTree.cpp)
add_executable(_6_29_Inorder _6_29_Inorder.cpp)
add_executable(_6_30_posorder _6_30_posorder.cpp)
add_executable(_6_30_levelOrderTree _6_30_levelOrderTree.cpp)


add_executable(2.1_hello_world cmake-build-debug/2.1_hello_world.c)



add_executable(_7_8_HighOfTree _7_8_HighOfTree.cpp)
add_executable(_7_9_WidthOfTree _7_9_WidthOfTree.cpp)
add_executable(main main.cpp)
add_executable(_7_10_CountLeafs _7_10_CountLeafs.cpp)
add_executable(_7_10_allLeafs _7_10_allLeafs.cpp)
add_executable(_7_11_treeIsFull _7_11_treeIsFull.cpp)
add_executable(_7_11_TreeLeftRight _7_11_TreeLeftRight.cpp)
add_executable(test test.cpp)
add_executable(_7_13_BST _7_13_BST.cpp)
add_executable(_7_13_BalanceTree _7_13_BalanceTree.cpp)
add_executable(_7_14_similarTree _7_14_similarTree.cpp)
add_executable(_7_14_sameTree _7_14_sameTree.cpp)
add_executable(_7_14_swapTree _7_14_swapTree.cpp)
add_executable(_7_16_removeElement _7_16_removeElement.cpp)
add_executable(_7_16_createLinkList _7_16_createLinkList.cpp)
add_executable(_7_16_printList _7_16_printList.cpp)
add_executable(_7_17_kthToLast _7_17_kthToLast.cpp)
add_executable(_7_17_hasCycle _7_17_hasCycle.cpp)
add_executable(_7_18_listRemove _7_18_listRemove.cpp)
add_executable(_7_20_isPalindrome _7_20_isPalindrome.cpp)
add_executable(_7_20_middleNode _7_20_middleNode.cpp)
add_executable(_7_20_reverseList _7_20_reverseList.cpp)
add_executable(_7_21_getIntersectionNode _7_21_getIntersectionNode.cpp)
add_executable(_7_21_mergeTwoList _7_21_mergeTwoList.cpp)
add_executable(_7_22_Merge _7_22_Merge.cpp)
add_executable(_7_22_sqStack _7_22_sqStack.cpp)
add_executable(_7_22_linkStack _7_22_linkStack.cpp)
add_executable(_7_23_shareStack _7_23_shareStack.cpp)
add_executable(_8_5_createGraph _8_5_createGraph.cpp)
add_executable(_8_5_InThread _8_5_InThread.cpp)
add_executable(_8_12_QuickSort_1 _8_12_QuickSort_1.cpp)
add_executable(_8_16_posOrderFirstNode _8_16_posOrderFirstNode.cpp)
add_executable(_8_18_tableDfs _8_18_tableDfs.cpp)
add_executable(_8_18_tableBfs _8_18_tableBfs.cpp)
add_executable(_8_22_minDistance _8_22_minDistance.cpp)
add_executable(_8_27_deleteSeqList _8_27_deleteSeqList.cpp)
add_executable(_8_27_treePathSum _8_27_treePathSum.cpp)
add_executable(_9_7_createHashTable _9_7_createHashTable.cpp)
add_executable(_2_26_isPrime _2_26_isPrime.cpp)